# fooyin

./: build.bat  run_vsdevcmd_build.bat  run_vsdevcmd_build_release.bat  run_vsdevcmd_configure.bat  run_vsdevcmd_configure_release.bat
include/gui/: guiconstants.h
src/core/playlist/: playlist.cpp
src/gui/: coverprovider.cpp
src/gui/playlist/: playlistpopulator.cpp
src/plugins/rgscanner/: CMakeLists.txt  ebur128scanner.cpp  ffmpegscanner.cpp  rgscanmemorycache.cpp  rgscanmemorycache.h  rgscannerdefs.h  rgscannerpage.cpp  rgscannerplugin.cpp  rgscannerplugin.h  rgscanresults.cpp  rgscanresults.h
src/plugins/wavebar/: wavebarwidget.cpp  wavebarwidget.h  waveformgenerator.cpp  waveformgenerator.h
src/utils/logging/: logmodel.cpp
